# mipt-mlops

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
mipt-mlops/: infer.py  networks.py  train.py
mipt_mlops/: constants.py  datasets.py  infer.py  networks.py  train.py
