[tool.poetry]
name = "mipt-mlops"
version = "0.1.0"
description = "my first mlops project"
authors = ["Lisa Kamenskaya <kamelis113@gmail.com>"]
readme = "README.md"
repository = "https://github.com/shinobu9/mipt-mlops"

[tool.poetry.dependencies]
python = "~3.10"
matplotlib = "^3.8.0"
scikit-learn = "^1.3.1"
torch = "^2.1.0"
pathlib = "^1.0.1"
fire = "^0.5.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.1"
pytest = "^7.3.1"
fire = "^0.5.0"

[tool.black]
line-length = 90
target-version = ["py310"]

[tool.isort]
src_paths = ["mipt-mlops"]
profile = "black"
line_length = 90
lines_after_imports = 2

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
